--- a/app/src/main/res/layout/message_item_text_incoming.xml
+++ b/app/src/main/res/layout/message_item_text_incoming.xml
@@ -32,6 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
+            android:layout_marginStart="5dp"
             android:textColor="@color/white"
             android:textSize="14sp"
             android:textStyle="bold"
